# colorsys

./: BUILD.md  CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: analogous.md  complementary.md  split_complementary.md  square.md  temperature.md  template.md
include/: colorsys.h  conversion.h  convert.h  engine.h  help.h  intermediate.h  intermediateConv.h  intermediateRep.h  options.h  print.h  sanity.h  tokenize.h
include/colorsys/: engine.h  intermediateConv.h  options.h  print.h  tokenize.h
lib/: CMakeLists.txt
lib/colorsys/: engine.cpp
src/: CMakeLists.txt  engine.cpp  main.cpp
src/convert/: cmy.cpp  cmyk.cpp  handler.cpp  hsv.cpp  hwb.cpp  rgb.cpp
src/engine/: analogous.cpp  complementary.cpp  handler.cpp  shade.cpp  split_complementary.cpp  square.cpp  temperature.cpp  tetradic.cpp  tint.cpp  triadic.cpp
src/ir/: cmy.cpp  cmyk.cpp  handler.cpp  hsv.cpp  hwb.cpp  rgb.cpp
src/model/: cmy.cpp  handler.cpp  hwb.cpp
